# shuul

./: .dockerignore  .gitignore  .justfile  .vampus.yml  Dockerfile  README.md
backend/: Cargo.toml
backend/migrations/: 20251006180103_users.up.sql  20251006180241_rules.up.sql  20251006185414_records.up.sql  20251006185414_requests.up.sql  20251024050854_ignored.down.sql  20251024050854_ignored.up.sql  20251121173011_requests-fake-data.down.sql  20251121173011_requests-fake-data.up.sql
backend/src/: constants.rs  main.rs
backend/src/http/: health.rs  ignored.rs  mod.rs  record.rs  request.rs  rule.rs  shuul.rs  user.rs  util.rs  zuul.rs
backend/src/models/: api_response.rs  data.rs  ignored.rs  ipdata.rs  mod.rs  record.rs  request.rs  response.rs  rule.rs  user.rs
frontend/: .env.development  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css
frontend/src/common/: types.ts  utils.ts
frontend/src/components/: auth_context.tsx  custom_dialog.tsx  custom_table.tsx  ignored_dialog.tsx  mode_context.tsx  mode_switcher.tsx  register.tsx  rule_create_dialog.tsx  rule_delete_dialog.tsx  rule_dialog.tsx  rule_edit_dialog.tsx  rule_update_dialog.tsx  signin.tsx
frontend/src/components/dialogs/: custom_dialog.tsx
frontend/src/layouts/: admin_layout.tsx  public_layout.tsx
frontend/src/models/: ignored.ts  record.ts  response.ts  respose.ts  rule.ts
frontend/src/pages/: help_page.tsx  login_page.tsx
frontend/src/pages/admin/: charts_page.tsx  dashboard_page.tsx  help_page.tsx  ignored_page.tsx  logout_page.tsx  records_page.tsx  requests_page.tsx  rules_page.tsx  users_page.tsx
frontend/src/pages/public/: home_page.tsx
