[package]
name = "backend"
version = "0.1.13"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros", "json", "original-uri"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
bcrypt = "0.17.1"
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
cookie = "0.18.1"
dotenv = "0.15.0"
hex = "0.4.3"
http = "1.3.1"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
maxminddb = "0.26.0"
openssl = { version = "0.10.73", features = ["vendored"] }
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "macros", "chrono", "runtime-tokio"] }
time = "0.3.44"
tokio = { version = "1.47.1", features = ["full", "time"] }
tokio-util = "0.7.16"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["tracing", "env-filter", "local-time"] }
uuid = { version = "1.18.1", features = ["v4"] }
